add mobile styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <script src="./reviewCard.js" type="text/javascript" defer></script>
+    <script src="./starRating.js" type="text/javascript" defer></script>
   </head>
   <body>
     <main>
@@ -28,15 +29,15 @@
       
       <section class="rating-wrapper">
         <div class="rating-card">
-          <img src="images/icon-star.svg" alt="">
+          <star-rating stars="5"></star-rating>
           <p>Rated 5 Stars in Reviews</p>
         </div>
         <div class="rating-card">
-          <img src="images/icon-star.svg" alt="">
+          <star-rating stars="5"></star-rating>
           <p>Rated 5 Stars in Report Guru</p>
         </div>
         <div class="rating-card">
-          <img src="images/icon-star.svg" alt="">
+          <star-rating stars="5"></star-rating>
           <p>Rated 5 Stars in BestTech</p>
         </div>
 
