add desktop styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <h2 class="title">10,000+ of our users love our products.</h2>
 
-      <p class="desciption">
+      <p class="description">
         We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our services.
       </p>
